[gd_scene load_steps=6 format=3 uid="uid://cwg2moulwlxo5"]

[ext_resource type="Script" uid="uid://coc7ua6xeuv7e" path="res://scripts/main/choice_reward.gd" id="1_hnqru"]
[ext_resource type="Script" uid="uid://cc2tbxhnjcxwb" path="res://scripts/main/player/cards_hand.gd" id="2_ilmdw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rg6yq"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ilmdw"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_hnqru"]

[node name="Choice_Reward" type="Node3D"]
script = ExtResource("1_hnqru")

[node name="Sprite3D" type="Sprite3D" parent="."]
shaded = true
alpha_cut = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
z_index = 200
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="hand" type="Panel" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -305.0
offset_top = -20.0
offset_right = 305.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rg6yq")
script = ExtResource("2_ilmdw")
base_y_offset = 0
smooth_appearance = false

[node name="collect_button" type="Button" parent="CanvasLayer/Control"]
texture_filter = 1
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -291.0
offset_top = -143.99994
offset_right = 145.02979
offset_bottom = 45.557922
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.49733248, 0.49733248)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 56
theme_override_styles/normal = SubResource("StyleBoxFlat_ilmdw")
text = "COLLECT"

[node name="Label" type="Label" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -212.0
offset_right = 20.0
offset_bottom = -189.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 25
theme_override_font_sizes/font_size = 46
text = "You have found the Cursed Scethches."

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("BoxShape3D_hnqru")

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
